--- a/package.json
+++ b/package.json
@@ -7,5 +7,14 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Ben Mann",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "body-parser": "^1.14.2",
+    "ejs": "^2.3.4",
+    "express": "^4.13.3",
+    "multer": "^1.1.0",
+    "request": "^2.67.0",
+    "shortid": "^2.2.4"
+  },
+  "devDependencies": {}
 }
